# CMBAnalysis

./: .gitignore  README.md  pyproject.toml  pytest_output.txt  requirements.txt  setup.cfg  test.py
cmb_analysis/: __init__.py  _version.py
cmb_analysis/analysis/: __init__.py  mcmc.py  power_spectrum.py  transfer.py
cmb_analysis/cosmology/: __init__.py  base.py  lcdm.py  wcdm.py
cmb_analysis/data/: __init__.py  plank_dataloader.py
cmb_analysis/utils/: __init__.py  math.py  statistics.py
cmb_analysis/visualization/: __init__.py  diagnostics.py  plotting.py
docs/: index.rst
docs/api/: index.rst
docs/examples/: Extended-Code.md  index.rst
docs/theory/: CMBAnalysis.md  index.rst
docs/tutorials/: index.rst
notebooks/: 01_quick_start.ipynb  02_parameter_estimation.ipynb  03_advanced_analysis.ipynb  04_planck_data_analysis.ipynb
tests/: __init__.py  conftest.py  test_analysis.py  test_cosmology.py  test_visualization.py
