[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cmb_analysis"
authors = [
    {name = "Your Name", email = "your.email@institution.edu"},
]
description = "A comprehensive framework for Cosmic Microwave Background radiation analysis"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cosmology", "CMB", "astrophysics", "MCMC", "data analysis"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "emcee>=3.1.0",
    "corner>=2.2.0",
    "healpy>=1.15.0",
    "iminuit>=2.8.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "jupyter>=1.0.0",
    "pre-commit>=2.17.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18.0",
    "nbsphinx>=0.8.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/cmb_analysis"
"Bug Tracker" = "https://github.com/yourusername/cmb_analysis/issues"
"Documentation" = "https://cmb-analysis.readthedocs.io/"

[tool.setuptools]
packages = ["cmb_analysis"]

[tool.setuptools_scm]
write_to = "cmb_analysis/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3