[metadata]
license_files = LICENSE

[options]
python_requires = >=3.8

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    __init__.py:F401
    test_*.py:E501
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[mypy.plugins.numpy.*]
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --verbose --cov=cmb_analysis --cov-report=term-missing

[coverage:run]
source = cmb_analysis
omit =
    */tests/*
    */docs/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == .__main__.:
    raise NotImplementedError
    raise ImportError
    except ImportError